--- a/frontend/app.json
+++ b/frontend/app.json
@@ -1,14 +1,17 @@
 {
   "expo": {
-    "name": "frontend",
-    "slug": "frontend",
+    "name": "JDD",
+    "slug": "JDD",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#302ea2"
+    },
+    "androidStatusBar" :{
+      "hidden": true
     },
     "updates": {
       "fallbackToCacheTimeout": 0
