--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/drawer": "^5.8.6",
     "@react-navigation/native": "^5.7.1",
     "@react-navigation/stack": "^5.7.1",
+    "axios": "^0.19.2",
     "escape-string-regexp": "^4.0.0",
     "expo": "~38.0.8",
     "expo-blur": "~8.1.2",
