--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-native-easy-grid": "^0.2.2",
     "react-native-elements": "^2.1.0",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-open-maps": "^0.3.5",
     "react-native-phone-call": "^1.0.9",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
