--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "expo-location": "~8.2.1",
     "expo-permissions": "~9.0.1",
     "expo-status-bar": "^1.0.2",
+    "i18n-js": "^3.7.1",
     "native-base": "^2.13.13",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
@@ -38,7 +39,8 @@
     "react-native-web": "~0.11.7",
     "react-native-webview": "^10.3.3",
     "react-native-youtube-iframe": "^1.2.4",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "expo-localization": "~8.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
