--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,8 +35,11 @@
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
+    "react-native-tts": "^3.2.0",
     "react-native-web": "~0.11.7",
-    "sort-by": "^1.2.0"
+    "react-native-webview": "^10.3.3",
+    "sort-by": "^1.2.0",
+    "expo-speech": "~8.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
