--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,11 +38,12 @@
     "react-native-screens": "~2.9.0",
     "react-native-tts": "^3.2.0",
     "react-native-web": "~0.11.7",
-    "react-native-webview": "^10.3.3",
-    "expo-speech": "~8.2.1"
+    "react-native-webview": "9.4.0",
+    "expo-speech": "~8.2.1",
     "react-native-youtube-iframe": "^1.2.4",
     "sort-by": "^1.2.0",
-    "expo-localization": "~8.2.1"
+    "expo-localization": "~8.2.1",
+    "expo-web-browser": "~8.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
