--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,7 +38,7 @@
     "react-native-screens": "~2.9.0",
     "react-native-tts": "^3.2.0",
     "react-native-web": "~0.11.7",
-    "react-native-webview": "9.4.0",
+    "react-native-webview": "^10.3.3",
     "expo-speech": "~8.2.1",
     "react-native-youtube-iframe": "^1.2.4",
     "sort-by": "^1.2.0",
